--- a/resources/assets/js/components/Game.css
+++ b/resources/assets/js/components/Game.css
@@ -14,3 +14,31 @@ body {
 .navbar-default .navbar-nav > li > a{
     color: #000016;
 }
+
+.panel{
+    margin-bottom: 0px;
+    border: 0px;
+    border-radius: 0px;
+}
+
+.TITLE {
+    text-align: center;
+    width: 100%;
+    z-index: 2;
+    min-width: 480px;
+}
+
+.TITLE_IMAGE {
+    width: 350px;
+    height: 50px;
+    border: 2px solid #000;
+    box-shadow: 0 0 5px #000;
+}
+
+.TITLE_SPACING {
+    width: 15%;
+}
+
+.game_background {
+    background-color: #d62728;
+}
