--- a/public/css/mystylesheet.css
+++ b/public/css/mystylesheet.css
@@ -39,6 +39,17 @@ body {
     width: 15%;
 }
 
-.game_background {
-    background-color: #d62728;
+.panel_background {
+    background-color: #033beb;
 }
+
+.game_letters {
+    color: white
+}
+
+.panel-default > .panel-heading {
+    background-color: #033beb;
+}
+
+.MARQUEE { font-family: Arial; font-size: 1em; font-weight: bold; text-shadow: 1px 1px 2px #000; text-align: center; width: 100%; min-width: 460px; max-width: 750px; color: #fff; white-space: nowrap; margin: auto; }
+
