--- a/public/css/mystylesheet.css
+++ b/public/css/mystylesheet.css
@@ -47,6 +47,10 @@ body {
     color: white
 }
 
+.game_background{
+    background-color: #033beb;
+}
+
 .MARQUEE { font-family: Arial; font-size: 1em; font-weight: bold; text-shadow: 1px 1px 2px #000; text-align: center; width: 100%; min-width: 460px; max-width: 750px; color: #fff; white-space: nowrap; margin: auto; }
 
 .ROUNDED { -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
