--- a/public/css/mystylesheet.css
+++ b/public/css/mystylesheet.css
@@ -43,6 +43,10 @@ body {
     background-color: #033beb;
 }
 
+.payout_color{
+    background-color: #191d75;
+}
+
 .game_letters {
     color: white
 }
