--- a/public/css/mystylesheet.css
+++ b/public/css/mystylesheet.css
@@ -87,3 +87,10 @@ body {
     width: 140px;
     height: 190px;
 }
+
+.holdCard{
+    font-size: 20px;
+    color: #000016;
+    font-weight: bolder;
+    margin: 0 30px;
+}
