--- a/public/css/mystylesheet.css
+++ b/public/css/mystylesheet.css
@@ -90,13 +90,13 @@ body {
 
 .holdCard{
     font-size: 20px;
-    color: #c90c2f;
+    color: #080d1a;
     font-weight: bolder;
 }
 
 .message{
     font-size: 35px;
-    color: #c90c2f;
+    color: #9d0420;
     font-weight: bolder;
     margin: 0 30px;
 }
