--- a/public/css/mystylesheet.css
+++ b/public/css/mystylesheet.css
@@ -53,7 +53,7 @@ body {
 
 .deal_button{
     border-radius: 50%;
-    width:  50%;
+    width:  100%;
     font-size: 30px;
     background-color: #4CAF50;
     color: #000016;
@@ -96,6 +96,13 @@ body {
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
+}
+
+
+.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+    background-color: #7DA0B1;
 }
 
 .div_margin{
